--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       defer
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>FAKE-FOREVER</title>
   </head>
   <body>
     <div class="wrapper">
