--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <script src="https://cdn.jsdelivr.net/npm/faunadb@latest/dist/faunadb.js"></script>
     <script
       type="module"
-      src="https://ad-display.vercel.app/exchange.js?id=356893001606234714&AdSlotID=hp-top-banner,hp-mid-banner"
+      src="https://ad-display.vercel.app/exchange.js?id=356893001606234714"
       id="helper"
       crossorigin="anonymous"
       defer
     ></script>
+    <!-- <script
+      type="module"
+      src="http://localhost:3000/exchange.js?id=356893001606234714"
+      id="helper"
+      crossorigin="anonymous"
+      defer
+    ></script> -->
     <link rel="stylesheet" href="style.css" />
     <title>FAKE-FOREVER</title>
   </head>
@@ -20,10 +27,10 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="/">Home</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="/about.html">About</a>
           </li>
           <li>
             <a href="#">Services</a>
